update url angular.min.js d3.v3.js in 2D.html

--- a/2D.html
+++ b/2D.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Fac 2D</title>
-    <script type="text/javascript" src="d3.v3.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3.v3.js"></script>
     <style type="text/css">      
       .clickable:hover {
       cursor: pointer;
@@ -13,7 +13,7 @@
   <body ng-app="app" ng-controller="ctrl">
     <svg width="1285" height="660"></svg>
 
-    <script type="text/javascript" src="angular.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script type="text/javascript" src="2D.js"></script>
   </body>
 </html>
